tests/snapshots/codegen_sqlite__sqlite_execlastid.snap
---
source: tests/codegen_sqlite.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite>;
}
impl AsExecutor for sqlx::SqlitePool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &*self
    }
}
impl AsExecutor for &sqlx::SqlitePool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        *self
    }
}
impl AsExecutor for sqlx::SqliteConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::Sqlite> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::Sqlite> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        (**self).as_executor()
    }
}
#[derive(Debug, Clone)]
pub struct CreateAuthorParams {
    pub name: String,
    pub bio: Option<String>,
}
pub const CREATE_AUTHOR: &str = "INSERT INTO authors (name, bio) VALUES (?, ?)";
pub async fn create_author<E: AsExecutor>(
    mut db: E,
    arg: CreateAuthorParams,
) -> Result<i64, sqlx::Error> {
    let result = sqlx::query(CREATE_AUTHOR)
        .bind(arg.name)
        .bind(arg.bio)
        .execute(db.as_executor())
        .await?;
    Ok(result.last_insert_rowid())
}
