tests/snapshots/codegen_sqlite__sqlite_execresult.snap
---
source: tests/codegen_sqlite.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite>;
}
impl AsExecutor for sqlx::SqlitePool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &*self
    }
}
impl AsExecutor for &sqlx::SqlitePool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        *self
    }
}
impl AsExecutor for sqlx::SqliteConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::Sqlite> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::Sqlite> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        (**self).as_executor()
    }
}
pub const DELETE_AUTHOR: &str = "DELETE FROM authors WHERE id = ?";
pub async fn delete_author<E: AsExecutor>(
    mut db: E,
    id: i64,
) -> Result<sqlx::sqlite::SqliteQueryResult, sqlx::Error> {
    sqlx::query(DELETE_AUTHOR).bind(id).execute(db.as_executor()).await
}
