tests/snapshots/codegen_sqlite__sqlite_one.snap
---
source: tests/codegen_sqlite.rs
expression: code
---
// Code generated by sqlc-gen-sqlx v[VERSION]. DO NOT EDIT.
// sqlc version: [VERSION]

#![allow(
    dead_code,
    reason = "generated queries may expose items a caller does not use"
)]

pub trait AsExecutor {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite>;
}
impl AsExecutor for sqlx::SqlitePool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &*self
    }
}
impl AsExecutor for &sqlx::SqlitePool {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        *self
    }
}
impl AsExecutor for sqlx::SqliteConnection {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut *self
    }
}
impl AsExecutor for sqlx::Transaction<'_, sqlx::Sqlite> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut **self
    }
}
impl AsExecutor for sqlx::pool::PoolConnection<sqlx::Sqlite> {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        &mut **self
    }
}
impl<T: AsExecutor + ?Sized> AsExecutor for &mut T {
    fn as_executor(&mut self) -> impl sqlx::Executor<'_, Database = sqlx::Sqlite> {
        (**self).as_executor()
    }
}
pub const GET_AUTHOR: &str = "SELECT id, name, bio FROM authors WHERE id = ?";
#[derive(Debug, Clone, sqlx::FromRow)]
pub struct GetAuthorRow {
    pub id: i64,
    pub name: String,
    pub bio: Option<String>,
}
pub async fn get_author<E: AsExecutor>(
    mut db: E,
    id: i64,
) -> Result<GetAuthorRow, sqlx::Error> {
    sqlx::query_as::<_, GetAuthorRow>(GET_AUTHOR)
        .bind(id)
        .fetch_one(db.as_executor())
        .await
}
